commit for test
Change-Id: Ie60378095b7613ea1aee929080d8d77f452fec46
Signed-off-by: karlchan-cn <karlchan.cn@gmail.com>

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -45,9 +45,9 @@
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>
-			classpath:config/app-dao-jdbc.xml,
-			classpath:config/app-context.xml,
-			classpath:config/app-security.xml
+    		classpath:config/app-context.xml,
+			<!-- classpath:config/app-dao-jdbc.xml,
+			classpath:config/app-security.xml -->
 		</param-value>
   </context-param>
   <listener>
