--- a/src/main/resources/properties/configuration.properties
+++ b/src/main/resources/properties/configuration.properties
@@ -1,5 +1,5 @@
 connection.driver_class=com.mysql.jdbc.Driver
-connection.url=jdbc:mysql://127.0.0.1:3306/Blog?useUnicode=true&amp;characterEncoding=utf-8
+connection.url=jdbc:mysql://127.0.0.1:3306/grocery?useUnicode=true&amp;characterEncoding=utf-8
 connection.username=root
 connection.password=root
 connection.maxActive=300
