--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<artifactId>grocery</artifactId>
+	<groupId>com.cn.kc</groupId>
 	<packaging>war</packaging>
 	<version>0.1.1</version>
 	<repositories>
@@ -36,11 +38,8 @@
 			<artifactId>spring-aop</artifactId>
 			<version>4.2.5.RELEASE</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-asm</artifactId>
-			<version>3.1.4.RELEASE</version>
-		</dependency>
+		<!-- <dependency> <groupId>org.springframework</groupId> <artifactId>spring-asm</artifactId> 
+			<version>4.2.5.RELEASE</version> </dependency> -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
@@ -236,26 +235,13 @@
 			<artifactId>hamcrest-all</artifactId>
 			<version>1.3</version>
 		</dependency>
-		<dependency>
-			<groupId>org.hibernate.java-persistence</groupId>
-			<artifactId>jpa-api</artifactId>
-			<version>2.0-cr-1</version>
-		</dependency>
-		<dependency>
-			<groupId>jboss</groupId>
-			<artifactId>javassist</artifactId>
-			<version>3.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.logging</groupId>
-			<artifactId>jboss-logging</artifactId>
-			<version>3.1.0.GA</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.spec.javax.transaction</groupId>
-			<artifactId>jboss-transaction-api_1.1_spec</artifactId>
-			<version>1.0.0.Final</version>
-		</dependency>
+		<!-- <dependency> <groupId>org.hibernate.java-persistence</groupId> <artifactId>jpa-api</artifactId> 
+			<version>2.1</version> </dependency> <dependency> <groupId>jboss</groupId> 
+			<artifactId>javassist</artifactId> <version>3.1</version> </dependency> <dependency> 
+			<groupId>org.jboss.logging</groupId> <artifactId>jboss-logging</artifactId> 
+			<version>3.1.0.GA</version> </dependency> <dependency> <groupId>org.jboss.spec.javax.transaction</groupId> 
+			<artifactId>jboss-transaction-api_1.1_spec</artifactId> <version>1.0.0.Final</version> 
+			</dependency> -->
 		<dependency>
 			<groupId>net.sf.json-lib</groupId>
 			<artifactId>json-lib</artifactId>
@@ -376,6 +362,11 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.1.0.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.9.10</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -397,6 +388,5 @@
 		<!-- 编译时的编码 -->
 		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
 	</properties>
-	<artifactId>ceramic-shop</artifactId>
-	<groupId>com.cn.kc</groupId>
+
 </project>
