--- a/pom.xml
+++ b/pom.xml
@@ -417,6 +417,18 @@
 			<artifactId>rapid-generator</artifactId>
 			<version>4.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>19.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.8.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
